1.2.5i2p2:
    Core & Setup:
    * 0903 FIX: availability: fixed bug causing the availability feature not considering timeperiod transitions

    Checks & Agents:
    * 0882 FIX: check_bi_local.py: fix crash in case of non-ascii characters...
    * 0832 FIX: solaris_mem: fixed invalid calculation of total swap...

    WATO:
    * 0904 FIX: Fixed exception in host parameter overview...

    Event Console:
    * 0902 FIX: event console view: fixed exception on rendering host tags for unknown hosts...

    Livestatus:
    * 0831 FIX: table statehist: no longer crashes on TIMEPERIOD TRANSITION entries with an invalid syntax...

    HW/SW-Inventory:
    * 0886 FIX: Fix exception on non-UTF-8 encoded characters in software list


1.2.5i2p1:
    Core & Setup:
    * 0785 FIX: Availability: fixed memory leak in table statehist...

    Checks & Agents:
    * 0786 FIX: zfsget: fixed compatibility with older Solaris agents...
    * 0787 FIX: df: fixed problems on some filesystem checks when legacy check parameters where used...
    * 0789 FIX: oracle_tablespaces: fixed bug when using dynamic filesystem levels...
    * 0604 FIX: windows_updates: now handles situations with forced reboot and no limits correctly
    * 0889 FIX: logwatch: fix case where rule wouldn't be applied...

    WATO:
    * 0784 Improved security of WATO bulk inventory by using transaction ids
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...

    Notifications:
    * 0752 FIX: FIX: compute correct state transitions for notifications...
    * 0753 FIX: FIX: correctly show original state in HTML notification mails...


1.2.5i2:
    Checks & Agents:
    * 0147 enterasys_fans: New Check to monitor fans of enterasys swichtes
    * 0774 ibm_svc_nodestats.diskio: new check for disk troughput per node on IBM SVC / V7000 devices
    * 0775 ibm_svc_systemstats.diskio: new check for disk throughput in IBM SVC / V7000 devices in total